--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,10 @@ authors = ["KenjiTakahashi <wozniakk@gmail.com>"]
 
 [dependencies]
 byteorder = "1.2.6"
+indexmap = "1.0.1"
 serde_json = { version = "1.0.26", features = ["preserve_order"] }
 string-interner = "0.7.0"
+
+[dev-dependencies]
+lazy_static = "1.1.0"
+rand = "0.5.5"
