--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ authors = ["KenjiTakahashi <wozniakk@gmail.com>"]
 [dependencies]
 byteorder = "1.2.6"
 indexmap = "1.0.1"
-serde_json = { version = "1.0.26", features = ["preserve_order"] }
+serde_json = { version = "1.0.32", features = ["preserve_order"] }
 string-interner = "0.7.0"
+concise = { path = "../concise" }
 
 [dev-dependencies]
 lazy_static = "1.1.0"
