--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ authors = ["KenjiTakahashi <wozniakk@gmail.com>"]
 
 [dependencies]
 byteorder = "1.2.6"
+clap = "2.21"  # This has to be in sync with version in "structopt" dep
 crossbeam-channel = "0.2.6"
 indexmap = "1.0.2"
 itertools = "0.7.8"
 lazy_static = "1.1.0"
+lz4 = "1.23.0"
 serde_json = { version = "1.0.32", features = ["preserve_order"] }
 string_cache = "0.7.3"
 structopt = "0.2.12"
