Use actual logging library
So we are able to log to file as well.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,15 @@ authors = ["KenjiTakahashi <wozniakk@gmail.com>"]
 
 [dependencies]
 byteorder = "1.2.7"
+chrono = "0.4.6"
 clap = "2.21"  # This has to be in sync with version in "structopt" dep
 concise = { path = "../concise", version = "0.2.1" }
 crossbeam-channel = "0.3.6"
+fern = "0.5.7"
 indexmap = "1.0.2"
 itertools = "0.8.0"
 lazy_static = "1.2.0"
+log = "0.4.6"
 lz4 = "1.23.1"
 num_cpus = "1.9.0"
 serde_json = { version = "1.0.35", features = ["preserve_order"] }
