--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
-name = "ds"
-version = "0.2.0"
+name = "dsp"
+version = "0.3.0"
+description = "Druid Segment Producer"
+license = "MIT OR Apache-2.0"
 authors = ["KenjiTakahashi <wozniakk@gmail.com>"]
 
 [dependencies]
